--- a/css/login.css
+++ b/css/login.css
@@ -8,15 +8,46 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  height: 100vh;
-  overflow: hidden;
+  
+  
+ 
+}
+.main{
+  display: flex;
+  justify-content:space-around;
+  flex-wrap: wrap-reverse;
+  
+}
+.content{
+  /* border: 2px solid #0461ec; */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  width: 650px;
+  color: #100349;
+ 
+}
+.content div{
+  /* border: 2px solid #0461ec; */
+  backdrop-filter: blur(0.1px);
+  opacity: 1;
+}
+
+
+.content h1{
+  font-size:40px;
+  text-shadow: 0 0 15px rgb(253, 252, 252), 0 0 25px rgb(250, 250, 248);
+}
+.content h2{
+  text-shadow: 0 0 15px rgb(253, 252, 252), 0 0 25px rgb(250, 250, 248);
 }
 
 .center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  border: 2px solid #0461ec;
+  margin-top: 9%;
+  margin-left: 4%;
   background: #ece7e7;
   backdrop-filter: blur(50px);
   border-radius: 15px;
@@ -140,5 +171,22 @@ input[type="submit"]:hover {
 @media screen and (max-width: 480px) {
   .center {
     width: 90%;
+  }
+}
+
+.custom-loader {
+  margin-left: 45%;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: repeating-conic-gradient(#766DF4 0 90deg, #E4E4ED 0 180deg);
+  animation: s1 1s infinite linear;
+  align-self: middle; /* Add this property */
+}
+
+@keyframes s1 {
+  100% {
+    transform: rotate(.5turn);
   }
 }
